--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
   "homepage": "https://github.com/choi2601/ts-jest-practice#readme",
   "devDependencies": {
     "@types/jest": "^29.5.1",
+    "@types/uuid": "^9.0.1",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "uuid": "^9.0.0"
   }
 }
